feat: use asynchronous tasks to index documents
