# internal/http/handler/api/handler.go
@@ -24,6 +24,8 @@ func NewHandler(documentManager *service.DocumentManager) *Handler {
 
 	h.mux.HandleFunc("GET /search", h.handleSearch)
 	h.mux.HandleFunc("POST /index", h.handleIndexDocument)
+	h.mux.HandleFunc("GET /tasks", h.listTasks)
+	h.mux.HandleFunc("GET /tasks/{taskID}", h.showTask)
 
 	return h
 }
